# tj_h2s_prediction

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  convert_preprocessing.py  dashboard.md  dg.toml  env.example  nestor_preprocessing_info.json  nestor_preprocessing_info.pkl  pyproject.toml  requirements.txt  system_plan.md  test_installation.py  upload_models_to_s3.py
background/: inks.md
dashboard/: .dockerignore  Dockerfile  app.py  constants.py  data.py  data_accuracy.py  pyproject.toml  railway.toml
dashboard/components/: accuracy_view.py  map_view.py  polar_heatmap.py  timeseries_range.py
data/: latest.csv  model_forecast.parquet  modeldata_h2s.csv  modeldata_h2s_nofill.parquet  spills.csv
deployments/: compose.yaml
docs/: DEPLOYMENT_GUIDE.md  PACKAGE_SUMMARY.md  VISUALIZATION_GUIDE.md  model_overview.md  notes.md
projects/h2s/: .coverage  FORECAST_DATA_PARTITIONING.md  config_local_test.yaml  config_production_test.yaml  pyproject.toml  pytest.ini  test_pipeline.py  test_wind_dependent_diffusion.py
projects/h2s/configs/: tiered_alerts.yaml
projects/h2s/reports/: README.md  monthly_accuracy.qmd
projects/h2s/scripts/: README.md  backfill_accuracy_reports.py  backfill_validation.py  check_validation_data.py  deploy_model.sh  extract_training_data.sh  materialize_artiacts.sh  materialize_artifacts.sh  materialize_data.sh  materialize_local_test.sh  seed_models_to_s3.py  test_extreme_slack.py  train_models.sh  train_station_models.py  xgboost_backtest.py
projects/h2s/src/h2s/: constants.py  definitions.py
projects/h2s/src/h2s/defs/: __init__.py  accuracy_reporting_pipeline.py  apcd_sensor_watch.py  h2s_alert_system.py  h2s_calibration_pipeline.py  h2s_daily_pipeline.py  h2s_dispersion_pipeline.py  h2s_multi_station_training.py  h2s_multihorizon_pipeline.py  h2s_multihorizon_training.py  h2s_pipeline.py  h2s_products_pipeline.py  h2s_river_emissions_pipeline.py  h2s_schedules.py  h2s_seed_models.py  h2s_training_pipeline.py  h2s_validation_pipeline.py
projects/h2s/src/h2s/defs/tiered_alerts/: __init__.py  assets.py  backtest.py  features.py  messages.py  report.py  schedules.py  state.py  tiers.py
projects/h2s/src/h2s/dispersion/: __init__.py  emission_inversion.py  gaussian.py  grid_config.py  hysplit_controls.py  hysplit_runner.py  lagrangian.py  visualizations.py
projects/h2s/src/h2s/emissions/: __init__.py  h2s_generation.py  tj_river_sources.py
projects/h2s/src/h2s/forecasting/: __init__.py  recursive.py
projects/h2s/src/h2s/predictor/: h2s_predictor.py  visualizations.py
projects/h2s/src/h2s/reporting/: __init__.py  weekly_scorecard.py
projects/h2s/src/h2s/resources/: __init__.py  minio.py  slack.py
projects/h2s/src/h2s/training/: __init__.py  calibration_eval.py  feature_builder.py  model_trainer.py  multi_station_trainer.py  multihorizon_trainer.py  relabeling.py  validation.py
projects/h2s/src/h2s/utils/: __init__.py  store_assets.py
projects/h2s/tests/: README.md  conftest.py  test_apcd_sensor_watch.py  test_asset_materialization.py  test_calibration_eval.py  test_constants.py  test_feature_builder.py  test_h2s_pipeline.py  test_model_versioning.py  test_predictor.py  test_recursive_forecast.py  test_s3_integration.py  test_tiered_alerts_backtest.py  test_tiered_alerts_state.py  test_tiered_alerts_tiers.py  test_train_and_select.py  test_training_pipeline.py
runfiles/: dahsboard.run.xml  (+15 more)
(+52 files in other folders)
