[project]
name = "resilient-h2s"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
dependencies = [
    "dagster>=1.12.12",
    "dagster-postgres>=0.28.2",
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "minio>=7.0.0",
    "imbalanced-learn>=0.11.0",
    "dagster-slack>=0.28.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/h2s"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "h2s"
registry_modules = [
    "h2s.components.*",
]


